# marcon_dashboards

./: .env.example  .gitignore  Home.py  README.md  pyproject.toml
.streamlit/: config.toml
core/: auth.py  db.py  fmt.py  ingest.py  inventory.py  metrics.py  models.py  settings.py  sku_fields.py  task2.py  theme.py  ui.py
dash_app/: app.py  auth.py  components.py  data.py
dash_app/views/: inventory.py  settings_page.py  skus.py  turnover.py  upload.py
db/migrations/: env.py
db/migrations/versions/: 2d4681a0ac41_drop_monthly_stock_table.py  466728a0c882_stock_table.py  809bb18a3f1a_sku_overrides.py  b1f7a2c3d4e5_sku_is_draft.py  c9421bce8f88_sku_raw_1c_fields.py  d57c9dd076a1_initial_schema.py  dafa86bb6be3_sales_table.py  e76ae490f10b_stock_daily_table.py
docs/: inventory_spec.md  sku_metrics_description.docx
pages/: 1_Маржинальный_доход.py  2_Управление_товарооборотом.py  3_Справочник_SKU.py  4_Загрузка_данных.py  5_Управление_запасами.py  99_Настройки.py
scripts/: build_gaps.py  build_recon.py
